--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -1,5 +1,3 @@
-book_filename: "bookdown-demo"
-language:
-  ui:
-    chapter_name: "Chapter "
 delete_merged_file: true
+new_session: yes
+before_chapter_script: "_common.R"
