--- a/_output.yml
+++ b/_output.yml
@@ -1,12 +1,11 @@
 bookdown::gitbook:
   css: style.css
   config:
+    toc_depth: 2
     toc:
+      collapse: section
       before: |
-        <li><a href="./">A Minimal Book Example</a></li>
-      after: |
-        <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li>
-    edit: https://github.com/rstudio/bookdown-demo/edit/master/%s
+        <li><a href="./">Lab book</a></li>
     download: ["pdf", "epub"]
 bookdown::pdf_book:
   includes:
